# sequencer

./: README.md  TODO.md  sequencer.cabal
lib/Control/: Sequencer.hs
lib/Control/Sequencer/: Internal.hs
verify/: Assets.hs  Common.hs  External.hs  Internal.hs  Main.hs  Redundant.hs  Speculate.hs
verify/Instances/Control/: Exception.hs
verify/Instances/Foreign/C/: Types.hs
