cabal-version: 2.4

name: sequencer
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base ^>=4.12.0.0
                 , mtl
                 , exceptions
                 , transformers
                 , witherable
    default-language: Haskell2010
    default-extensions: ExistentialQuantification
                      , ScopedTypeVariables
                      , BlockArguments
                      , FlexibleContexts
                      , TypeApplications
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances

library
    import: commons
    exposed-modules: Control.Sequencer
                   , Control.Sequencer.Internal
    hs-source-dirs: lib

test-suite verify
    import: commons
    build-depends: sequencer
                 , random
                 , tasty
                 , tasty-hunit
                 , tasty-hedgehog
                 , tasty-leancheck
                 , tasty-quickcheck
                 , containers
                 , QuickCheck
                 , base-compat
                 , generic-arbitrary
                 , generic-deriving
                 , hashable
    default-extensions: StandaloneDeriving
                      , ConstraintKinds
                      , DeriveDataTypeable
                      , DeriveGeneric
                      , FlexibleContexts
                      , FlexibleInstances
                      , MultiParamTypeClasses
                      , QuantifiedConstraints
                      , RankNTypes
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TypeFamilies
    ghc-options: -fdefer-typed-holes
    hs-source-dirs: verify
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Assets
                 , Redundant
                 , Instances.Control.Exception
                 , Instances.Foreign.C.Types
                 , Instances.System.IO
                 , Instances.Utils.GenericArbitrary
